# challenge_rp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: api.py  database.py  settings.py  urls.py
docs/: architecture.md
invoices/: api.py  exceptions.py  models.py  schemas.py  services.py
invoices/migrations/: 0001_initial.py
provider_mocks/: Dockerfile  README.md  server.py
providers/: api.py  base.py  exceptions.py  http_client.py  registry.py  schemas.py  types.py
providers/adapters/: ar.py  br.py
tests/: test_api.py  test_billing_api.py  test_database_config.py  test_provider_adapters.py
