[project]
name = "challenge-rp"
version = "0.1.0"
description = "Django API project with Django Ninja"
authors = [
    { name = "Nico Abitante" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.4,<2.0",
    "psycopg[binary]>=3.2,<4.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9.0"
pytest-django = ">=4.11,<5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
